--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,7 @@
 - Just delete the file ([`d7c33d8`](https://github.com/madninjaskillz/allpowers-ble/commit/d7c33d8ae75d413d56005d31e7c30e1b1dd6f877))
 - Pycharm adds lots of silly files ([`6cfa51a`](https://github.com/madninjaskillz/allpowers-ble/commit/6cfa51a651b5d534c8d24caa8ad4f5a9c54f310f))
 - More linter issues ([`7239e77`](https://github.com/madninjaskillz/allpowers-ble/commit/7239e7742754b563178ce3e44ff595413de515a0))
-- Only attempt a gatt write if client isnt null ([`fbc3a5c`](https://github.com/madninjaskillz/allpowers-ble/commit/fbc3a5c351e804ef77c9aeab423e7a73d9f27733))
+- Only attempt a gatt write if client is not null ([`fbc3a5c`](https://github.com/madninjaskillz/allpowers-ble/commit/fbc3a5c351e804ef77c9aeab423e7a73d9f27733))
 
 ### Unknown
 
